# hardline-sovereign-core

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  PRODUCT_SPEC.md  PUBLIC_RELEASE_CHECKLIST.md  README.md  RELEASE_NOTES_V0_1_1.md  RELEASE_NOTES_V0_1_2.md  ROADMAP.md  SECURITY.md  docker-compose.yml  manifest.json  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  agent.py  config.py  db.py  ledger.py  main.py  storage.py  ui.py
docs/: API_EXAMPLES.md  REVIEWER_DEMO.md
scripts/: smoke_test.ps1  smoke_test.sh
tests/: test_core.py
