[project]
name = "hardline-sovereign-core"
version = "0.1.2"
description = "Docker-deployable, local-first AI-native workspace for tasks, artifacts, memory, approvals, and append-only execution history."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
